--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*,
+
 *::before, *::after {
     margin: 0;
     padding: 0;
@@ -48,7 +48,7 @@ li{
     transition: color 0.3s; 
 }
 /*
-/* Reset básico */
+/*
 *,
 *::before,
 *::after {
@@ -61,7 +61,7 @@ ul, ol {
     list-style: none;
 }
 
-/* Estilos globais */
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -99,8 +99,9 @@ nav ul li a:hover {
     color: #ffffff;
 }
 
-/* Texto */
+
 p {
     font-size: 16px;
     text-align: justify;
 }
+*/
