--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-*::before, *::after {
+* , *::before, *::after {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -17,7 +17,7 @@ table {
   }
 header{
     background-color: rgba(00, 100, 255, 0.9);
-    margin:0em 4em;
+    margin:0px 4em;
     padding:20px;
     display: flex;
     align-items: center;
@@ -25,20 +25,17 @@ header{
 
 }
 header img{
-    height: 50px
+    height: 30px
 }
 nav ul {
     display: flex; 
-    list-style: none;
-    padding: 0;
 }
-li{
+nav ul li{
     margin:0px 1em
 }
  p {
     font-size: 16px;
     font-family: Arial;
-    text-align: left;
     text-align: justify;
  }
  nav ul li a {
@@ -47,61 +44,3 @@ li{
     font-weight: bold;
     transition: color 0.3s; 
 }
-/*
-/*
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-ul, ol {
-    list-style: none;
-}
-
-
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-}
-
-header {
-    background-color: rgba(0, 100, 255, 0.9);
-    margin: 0 4em;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-header img {
-    height: 50px;
-}
-
-nav ul {
-    display: flex;
-}
-
-nav ul li {
-    margin: 0 1em;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #d6c5c5;
-    font-weight: bold;
-    transition: color 0.3s;
-}
-
-nav ul li a:hover {
-    color: #ffffff;
-}
-
-
-p {
-    font-size: 16px;
-    text-align: justify;
-}
-*/
